# finance-llm

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: daily-ingest.yml
import/rules/: accounts.yaml  payees.yaml
import/rules/csv_profiles/: amex.yaml  chase.yaml  firsttech.yaml
journal/: main.journal
journal/postings/2025/2025-08/: citi.journal
journal/postings/2025/2025-09/: citi.journal
journal/postings/2025/2025-10/: citi.journal
journal/postings/2025/2025-11/: chase.journal  citi.journal  firsttech.journal
journal/postings/2025/2025-12/: chase.journal  citi.journal  firsttech.journal
journal/postings/2026/2026-01/: chase.journal  citi.journal  firsttech.journal
journal/postings/2026/2026-02/: chase.journal  citi.journal  firsttech.journal
src/finance_llm/: __init__.py
src/finance_llm/lib/: __init__.py  csv_normalizer.py  email_client.py  fin_commands.py  fingerprint.py  journal_writer.py  mcp_server.py  report_generator.py  rules.py  simplefin_client.py  state.py
tests/: test_csv_normalizer.py  test_fingerprint.py  test_rules.py
